# ros1-drug-repurposing

./: .gitignore  01_prepare_receptor.py  02_fetch_drugs.py  03_dock.py  04_analyze.py  05_visualize.py  06_improve.py  07_benchmark.py  CLAUDE.md  pyproject.toml  runpod_setup.sh
data/: drug_library.csv  grid_G2032R.txt  grid_MET.txt  grid_WT.txt
data/benchmarks/: README.md  benchmark_compounds.csv  benchmark_sets.csv
docs/plans/: 2026-03-30-repurposing-implementation.md  2026-03-30-repurposing-screen-design.md  2026-03-31-methodology-improvements-design.md  2026-03-31-methodology-improvements.md
results/: admet_flags.csv  benchmark_active_ranks.csv  benchmark_calibration.csv  benchmark_entities_ros1_known_actives_background_composite_score.csv  benchmark_entities_ros1_known_actives_background_g2032r_score.csv  benchmark_membership.csv  benchmark_metrics.csv  benchmark_registry.csv  benchmark_summary.md  campaign1_scores.csv  campaign2_scores.csv  campaign3_scores.csv  controls.csv  report.md  repurposing_ranked.csv  repurposing_report.html  top20_hits.csv  validation_rmsd.txt
results/poses_3d/: Azilsartan_Medoxomil.html  Bardoxolone_Methyl.html  Bromocriptine_Mesylate.html  Chlorhexidine_diacetate.html  Dutasteride.html  Enoxolone.html  Fluorescein.html  Fluzoparib_(SHR-3162).html  Irinotecan_(CPT-11).html  Irinotecan_(CPT-11)_HCl_Trihydrate.html  Irinotecan_hydrochloride.html  Lomitapide.html  Lomitapide_Mesylate.html  Meisoindigo.html  Nilotinib_(AMN-107).html  Piperaquine_phosphate.html  Tanshinone_I.html  Tepotinib_(EMD_1214063).html  Tucatinib.html  (+4 more)
