[project]
name = "repurposing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "biopython>=1.87",
    "gemmi>=0.7.5",
    "matplotlib>=3.10.8",
    "meeko>=0.7",
    "numpy<2",
    "openmm>=8.5.0",
    "pandas>=3.0.1",
    "pdbfixer>=1.12.0",
    "prody>=2.6.1",
    "py3dmol>=2.5.4",
    "rdkit>=2025.9.6",
    "requests>=2.33.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "tqdm>=4.67.3",
]
